feat: added basics for shops and products
